--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <h1>Welcome to My portfolio</h1>
-    <IMG 
-     src="177595a2-7e24-48fd-94f8-efd4a95fccb6.jfif"
-     width="100"/>
+    <IMG width="100" src="c:\Users\Hp\Desktop\177595a2-7e24-48fd-94f8-efd4a95fccb6.jfif"/>
      <h1>HI GUYS</h1>
     <p> I AM  <strong>MOHAMMED IRSHAD</strong>.
       I basically from india but currently staying in uae.<br/>
